kubernetes/applications/navidrome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 4533
      targetPort: 4533
  selector:
    app: navidrome
